# fisheries-and-environment-data-warehouse

./: .gitignore  .gitlab-ci.yml  .trivyignore  Makefile  README.md  sonar-project.properties
forklift/: .env.test  pyproject.toml
forklift/forklift/: config.py  db_engines.py  main.py
forklift/forklift/pipeline/: flows_config.py  utils.py
forklift/forklift/pipeline/entities/: databases.py  generic.py  sacrois.py
forklift/forklift/pipeline/flow_schedules/: .~lock.sync_table_with_pandas.csv#  sync_table_from_db_connection.csv  sync_table_with_pandas.csv
forklift/forklift/pipeline/flows/: activities.py  activity_dates.py  catches.py  coe.py  compute_sacrois_segments.py  cox.py  cps.py  deps.py  discards.py  drop_table.py  enrich_monitorfish_catches.py  extract_rapportnav_analytics.py  import_sacrois_data.py  landings.py  pnos.py  rapportnav_historical.py  reset_dictionary.py  reset_proxy_pg_database.py  rtps.py  sacrois.py  sync_geo_table_to_h3_table.py  sync_table.py  sync_table_from_db_connection.py  sync_table_with_pandas.py  vms.py
forklift/forklift/pipeline/helpers/: dates.py  generic.py  processing.py
forklift/forklift/pipeline/queries/monitorenv_remote/: amp_cacem.sql  amp_cacem_tmp.sql  analytics_actions.sql  missions.sql  missions_pam.sql  regulations_cacem.sql  regulations_cacem_h3.sql
forklift/forklift/pipeline/queries/monitorfish_proxy/: vessels.sql
forklift/forklift/pipeline/queries/monitorfish_remote/: activities.sql  activity_dates.sql  analytics_controls_full_data.sql  bft_catches.sql  catches.sql  (+20 more)
forklift/forklift/pipeline/shared_tasks/: control_flow.py  datagouv.py  dates.py  generic.py  rapportnav.py
forklift/tests/: conftest.py  mocks.py
forklift/tests/test_pipeline/: test_flows_config.py
forklift/tests/test_pipeline/test_flows/: conftest.py  test_activities.py  test_activity_dates.py  test_catches.py  test_coe.py  test_compute_sacrois_segments.py  test_cox.py  test_cps.py  test_deps.py  test_discards.py  test_enrich_monitorfish_catches.py  test_import_sacrois_data.py  test_landings.py  test_pnos.py  test_proxy_pg_database.py  test_rapportnav.py  test_reset_proxy_pg_database.py  test_rtps.py  test_sacrois.py  test_sync_geo_table_to_h3_table.py  test_sync_table.py  test_sync_table_from_db_connection.py  test_sync_table_with_pandas.py  test_vms.py
forklift/tests/test_pipeline/test_helpers/: test_generic.py  test_processing.py
forklift/tests/test_pipeline/test_shared_tasks/: test_rapportnav.py
(+131 files in other folders)
